--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -8,10 +8,9 @@ color: #ff5e14 !important;
     font-size: 15px;
     background-color: #cfc8c5;
 }
-
-
 .gray{
   background-color: #cfc8c5;
 }
-
-
+.modal{
+  background: rgba(0,0,0, .5);
+}
