--- a/src/app/admin/login/login.component.html
+++ b/src/app/admin/login/login.component.html
@@ -9,17 +9,18 @@
         Welcome Back
       </div>
 
-      <div class="col-lg-12 login-form">
+      <div class="col-lg-12 login-form fs-4">
         <div class="col-lg-12 login-form">
           <form (ngSubmit)="onSubmit(loginForm)" #loginForm="ngForm">
             <div class="form-group">
               <label class="form-control-label w-50 mx-auto"><span class="fas fa-envelope"></span> Email</label>
-              <input type="text" class="form-control w-50 mx-auto" [ngModelOptions]="{standalone: true}" name= "email" ngModel>
-
+              <input type="text" class="form-control w-50 mx-auto" name= "email" ngModel>
+              <p class="text-danger text-center fs-5" *ngIf="errors.email">{{errors.email}}</p>
             </div>
             <div class="form-group">
               <label class="form-control-label w-50 mx-auto"><span class="fas fa-lock"></span> Password</label>
-              <input type="password" class="form-control w-50 mx-auto" [ngModelOptions]="{standalone: true}" name= "password" ngModel>
+              <input type="password" class="form-control w-50 mx-auto"  name= "password" ngModel>
+              <p class="text-danger text-center fs-5" *ngIf="errors.password">{{errors.password}}</p>
             </div>
 
             <button type="submit" class="btn login">LOGIN</button><br><br>
