--- a/src/app/admin/forgot-password/forgot-password.component.html
+++ b/src/app/admin/forgot-password/forgot-password.component.html
@@ -5,17 +5,23 @@
         <div class="col-lg-12 login-title">
           Retrive your password
         </div>
-  
+
+        <span class="alert alert-danger" role="alert" *ngIf="message">
+          {{message}}
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </span>
+
         <div class="col-lg-12 login-form">
           <div class="col-lg-12 login-form">
-            <form>
+            <form (ngSubmit)="onSubmit(forgotForm)" #forgotForm="ngForm">
               <div class="form-group">
                 <label class="form-control-label w-50 mx-auto"><span class="fas fa-envelope"></span> Email</label>
-                <input type="text" class="form-control w-50 mx-auto" ngModel>
+                <input type="text" class="form-control w-50 mx-auto" name="email" ngModel>
+                <p class="text-danger text-center fs-5" *ngIf="error.email">{{error.email}}</p>
   
               </div>
   
-              <button type="submit" class="btn login">Request new password</button><br><br>
+              <button type="submit" class="btn login" [disabled] = "wait">Request new password</button><br><br>
             </form>
           </div>
         </div>
@@ -23,4 +29,4 @@
         <h4 class="text-center text-white mb-5"><a routerLink="/login" class="links mx-2">Login</a> OR <a routerLink="/register" class="links mx-2">Register</a></h4>
     </div>
     </div>
-  
+</div>
