--- a/src/app/admin/reset-password/reset-password.component.html
+++ b/src/app/admin/reset-password/reset-password.component.html
@@ -6,16 +6,22 @@
           Get your password
         </div>
   
+        <span class="alert alert-danger" role="alert" *ngIf="message">
+          {{message}}
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </span>
+
         <div class="col-lg-12 login-form">
           <div class="col-lg-12 login-form">
-            <form>
+            <form (ngSubmit)="onSubmit(resetForm)" #resetForm="ngForm">
                 <div class="form-group">
                     <label class="form-control-label w-50 mx-auto"><span class="fas fa-lock"></span> Password</label>
-                    <input type="password" class="form-control w-50 mx-auto">
+                    <input type="password" class="form-control w-50 mx-auto" name="password" ngModel>
+                    <p class="text-danger text-center fs-5" *ngIf="error.password">{{error.password}}</p>
                   </div>
                   <div class="form-group">
                     <label class="form-control-label w-50 mx-auto"><span class="fas fa-lock"></span>Confirm Password</label>
-                    <input type="password" class="form-control w-50 mx-auto">
+                    <input type="password" class="form-control w-50 mx-auto" name="password_confirm" ngModel>
                   </div>
               
               <button type="submit" class="btn login">Submit</button><br><br>
