--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -28,12 +28,38 @@
         <!-- <td>{{prod.category}}</td> -->
         <td>{{prod.description}}</td>
         <td>{{prod.price}}</td>
-        <td><button class="btn btn-primary " [routerLink]="['/product','details',prod.id]">Show</button></td>
+        <td><button class="btn btn-primary"  data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="getProductById(prod.id!)">Show</button></td>
         <td><button class="btn btn-warning " [routerLink]="['/product','edit', prod.id]">Edit</button></td>
         <td><button class="btn btn-danger "  (click)="onItemDeleted(prod.id!)">Delete</button></td>
       </tr>
     </tbody>
   </table>
+
+<!-- Modal -->
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Product</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body text-center">
+        <ng-template [ngIf]="pro">
+            <h2>{{pro.name}}</h2>
+            <img src="{{pro.imagepath}}" style="width: 200px; height: 200px;" alt="">
+            <p>{{pro.description}}</p>
+      </ng-template>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
   <pagination-controls
   (pageChange)="p = $event"
   class="d-flex justify-content-end fs-4 me-5">
