made post order and food_order in database (bind with backend) and display info in order in dashboard

--- a/src/app/admin/dashboard/order/order.component.html
+++ b/src/app/admin/dashboard/order/order.component.html
@@ -61,6 +61,18 @@
                                       <div class="cart_item_title">status</div>
                                       <div class="cart_item_text">{{ordr.PaymentStatus.status}}</div>
                                   </div>
+                                  <div class="cart_item_quantity cart_info_col ">
+                                    <div class="cart_item_title">userName</div>
+                                    <div class="cart_item_text">{{ordr.User.User_Name}}</div>
+                                </div>
+                                <div class="cart_item_quantity cart_info_col ">
+                                    <div class="cart_item_title">userAddress</div>
+                                    <div class="cart_item_text">{{ordr.User.User_Address}}</div>
+                                </div>
+                                <div class="cart_item_quantity cart_info_col ">
+                                    <div class="cart_item_title">userPhone</div>
+                                    <div class="cart_item_text">{{ordr.User.User_Phone}}</div>
+                                </div>
                               </div>
                           </li>
                       </ul>
