--- a/src/app/core/product-feature/view-cart/view-cart.component.html
+++ b/src/app/core/product-feature/view-cart/view-cart.component.html
@@ -1,14 +1,18 @@
 <div class="cart_section">
-  <div class="container-fluid">
-      <div class="row">
-          <div class="col-lg-10 offset-lg-1">
-              <div class="cart_container">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-10 offset-lg-1">
+                <div class="cart_container">
                   <div class="cart_title">Shopping Cart</div>
-                  <div class="cart_items"  *ngFor="let item of foods ">
+                    <div class="cart_items"  *ngFor="let item of foods ">
                       <ul class="cart_list">
                           <li class="cart_item clearfix">
                               <div class="cart_item_image"><img src={{item.imagepath}} alt=""></div>
                               <div class="cart_item_info d-flex flex-md-row flex-column justify-content-between">
+                                <div class="cart_item_name cart_info_col">
+                                    <div class="cart_item_title">ID</div>
+                                    <div class="cart_item_text">{{item.id}}</div>
+                                </div>
                                   <div class="cart_item_name cart_info_col">
                                       <div class="cart_item_title">Name</div>
                                       <div class="cart_item_text">{{item.name}}</div>
@@ -33,16 +37,21 @@
                           </li>
                       </ul>
 
-                  <div class="order_total">
-                      <div class="order_total_content text-md-right">
-                          <div class="order_total_title">Order Total:</div>
-                          <div class="order_total_amount">{{totalPrice}}</div>
-                      </div>
-                  </div>
-                  <div class="cart_buttons"> <button type="button" class="button cart_button_clear" routerLink="/product/listing">Continue Shopping</button> <button type="button" class="button cart_button_checkout"  routerLink="/checkout" (click)="onAddProduct(item)">Check Out</button> </div>
-              </div>
-          </div>
-      </div>
-  </div>
-</div>
+
+                    </div>
+                    <div class="order_total">
+                        <div class="order_total_content text-md-right">
+                            <div class="order_total_title">Order Total:</div>
+                            <div class="order_total_amount">{{totalPrice}}</div>
+                        </div>
+                    </div>
+                  
+                    <div class="cart_buttons">
+                        <button type="button" class="button cart_button_clear" routerLink="/product/listing">Continue Shopping</button>
+                        <button type="button" class="button cart_button_checkout"  routerLink="/checkout" (click)="onAddOrder(foods)">Check Out</button>
+                     </div>
+               </div>
+           </div>
+       </div>
+   </div>
 </div>
