adding search for menu and dashboard

--- a/src/app/core/product-feature/product-listing/product-listing.component.html
+++ b/src/app/core/product-feature/product-listing/product-listing.component.html
@@ -1,5 +1,9 @@
 <section>
     <h2 class="text-center p-5 m-2">WELCOME TO OUR RESTAURANT</h2>
+    <form class="d-flex">
+        <input  class="form-control me-2 search mx-auto fs-4 me-5" name="search" [(ngModel)]="searchInput" type="search" placeholder="Search" aria-label="Search">
+      </form>
+
 
 </section>
 
@@ -23,7 +27,7 @@
         <!-- items -->
         <div class="item-listing__items item-listing--3items" style="width:100%">
             <!-- medium 8 item -->
-          <app-product-item class="item-medium-1"  *ngFor="let prod of productArr | paginate:{ itemsPerPage: 6, currentPage: p} "  [productItem]="prod" ></app-product-item>
+          <app-product-item class="item-medium-1"  *ngFor="let prod of productArr | filter: searchInput | paginate:{ itemsPerPage: 6, currentPage: p}"  [productItem]="prod" ></app-product-item>
         </div>
 
   <pagination-controls
