admin/user authentication & authorization

--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -13,22 +13,8 @@
           <li class="nav__item">
             <a class="nav__link " aria-current="page" routerLink="home">Home</a>
           </li>
-          <li class="nav__item dropdown ">
-            <!-- title -->
-            <a class="nav__link dropdown__header" routerLink="">
-              Menu
-            </a>
-            <!-- items -->
-            <div class="dropdown__body">
-              <ul class=" list">
-                <li class="list__item">
-                  <a class="nav__inner-link" routerLink="product/listing">All Menu</a>
-                </li>
-                <li class="list__item">
-                  <a class="nav__inner-link" routerLink="product/add">Add New Item</a>
-                </li>
-              </ul>
-            </div>
+          <li class="nav__item">
+            <a class="nav__link " aria-current="page" routerLink="product/listing">Menu</a>
           </li>
 
           <li class="nav-item">
