--- a/src/app/admin/register/register.component.html
+++ b/src/app/admin/register/register.component.html
@@ -9,7 +9,7 @@
         <div class="col-lg-12 login-title">
           Create an account
         </div>
-  
+
         <div class="col-lg-12 login-form">
           <div class="col-lg-12 login-form">
             <form (ngSubmit)="onSubmit(registerForm)" #registerForm="ngForm">
@@ -17,32 +17,45 @@
                     <label class="form-control-label w-50 mx-auto"><span class="fas fa-user"></span> Full Name</label>
                     <input type="text" class="form-control w-50 mx-auto" name="name" ngModel>
                   </div>
-                  <!-- <p class="text-danger pl-1" *ngIf="errors.name">{{errors.name}}</p> -->
 
+                  <div class="form-group">
+                    <label class="form-control-label w-50 mx-auto"><span class="fas fa-user"></span> Phone Number</label>
+                    <input type="text" class="form-control w-50 mx-auto" name="phone" ngModel>
+                  </div>
+
+                  <div class="form-group">
+                    <label class="form-control-label w-50 mx-auto"><span class="fas fa-user"></span> Address</label>
+                    <input type="text" class="form-control w-50 mx-auto" name="address" ngModel>
+                  </div>
 
               <div class="form-group">
                 <label class="form-control-label w-50 mx-auto"><span class="fas fa-envelope"></span> Email</label>
                 <input type="text" class="form-control w-50 mx-auto" name="email" ngModel>
               </div>
-              <!-- <p class="text-danger pl-1" *ngIf="errors.email">{{errors.email}}</p> -->
 
 
               <div class="form-group">
                 <label class="form-control-label w-50 mx-auto"><span class="fas fa-lock"></span> Password</label>
                 <input type="password" class="form-control w-50 mx-auto" name="password" ngModel>
               </div>
-              <!-- <p class="text-danger pl-1" *ngIf="errors.password">{{errors.password}}</p> -->
 
               <div class="form-group">
                 <label class="form-control-label w-50 mx-auto"><span class="fas fa-lock"></span> Retype Password</label>
                 <input type="password" class="form-control w-50 mx-auto" name="password_confirmation" ngModel>
               </div>
+              <p class="text-danger pl-1 ms-5" *ngIf="errors.name">{{errors.name}}</p>
+              <p class="text-danger pl-1 ms-5" *ngIf="errors.phone">{{errors.phone}}</p>
+              <p class="text-danger pl-1 ms-5" *ngIf="errors.address">{{errors.address}}</p>
+              <p class="text-danger pl-1 ms-5" *ngIf="errors.email">{{errors.email}}</p>
+              <p class="text-danger pl-1 ms-5"*ngIf="errors.password">{{errors.password}}</p>
+
+<br>
               <button type="submit" class="btn login">Register</button><br><br>
               <h5 class="text-white text-center">- or -</h5>
             </form>
           </div>
         </div>
-  
+
         <a href="#" class="btn my-5 mx-2">
           <i class="fab fa-facebook mx-2"></i> Sign up using Facebook
         </a>
@@ -51,8 +64,7 @@
         </a>
         <br>
             <h4 class="text-white mb-5">Already have an account? <a routerLink="/login" class="text-center links">Login</a>
-            </h4>  
-  
+            </h4>
+
       </div>
     </div>
-  
