--- a/src/app/core/product-feature/product-item/product-item.component.html
+++ b/src/app/core/product-feature/product-item/product-item.component.html
@@ -11,3 +11,29 @@
             </div>
         </div>
     </a>
+    <div class="crud-actions">
+        <a data-bs-toggle="modal" data-bs-target="#show" (click)="getProductById(productItem.id!)" ><i class="far fa-eye"></i></a>
+    </div>
+    
+<div class="modal fade" id="show" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Show Product</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body text-center">
+          <ng-template [ngIf]="this.productItem">
+              <h2>{{productItem.name}}</h2>
+              <img src="{{productItem.imagepath}}" style="width: 200px; height: 200px;" alt="">
+              <p>{{productItem.price}}</p>
+              <p>{{productItem.description}}</p>
+        </ng-template>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
