--- a/src/app/core/product-feature/product-item/product-item.component.html
+++ b/src/app/core/product-feature/product-item/product-item.component.html
@@ -23,11 +23,11 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body text-center">
-          <ng-template [ngIf]="this.productItem">
-              <h2>{{productItem.name}}</h2>
-              <img src="{{productItem.imagepath}}" style="width: 200px; height: 200px;" alt="">
-              <p>{{productItem.price}}</p>
-              <p>{{productItem.description}}</p>
+          <ng-template [ngIf]="pro">
+              <h2>{{pro.name}}</h2>
+              <img src="{{pro.imagepath}}" style="width: 200px; height: 200px;" alt="">
+              <p>{{pro.price}}</p>
+              <p>{{pro.description}}</p>
         </ng-template>
         </div>
         <div class="modal-footer">
